+ Added support for additional lines of text in selectbox lists. These lines won't show up in the display area when selected, so it's the perfect place to give custom details like explaining what the option does, etc. It's also very easy to add them to the original text. Because it's likely to break the layout if JavaScript is disabled, I at least made sure that IE6 can support our custom select boxes, which is why I worked on IE6 support recently. (sbox.js, index.css) - Removed all public methods for the select box, for simplicity. Now calling $(object).sb() will either create the custom select box, or simply refresh it based on any changes applied to the original select box. Also removed a superfluous call to .removeClass('above'). (sbox.js) ! Fixed this annoying bug where select boxes would be duplicated instead of refreshed. This was due to the associated DOM element being cleaned up a bit too thoroughly. (sbox.js) @ Current size for sbox is 1995 bytes, the lowest yet. And that's taking into account the 30+ bytes needed for the 'details' feature described above. Oh, and Merry Christmas :)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1277,6 +1277,13 @@ select.sb
 	.text extends .inline-block
 		vertical-align: baseline
 
+	.details extends .inline-block
+		vertical-align: baseline
+		font-style: italic
+		font-size: .9em
+		padding: 3px
+		color: #666
+
 	/* display area (always visible) */
 	.display
 		background: rgba(255,255,255,.5)
